# comic_agent

./: .example.env  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.specify/: feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
scripts/: probe_storyboard_prompts.py
specs/001-four-panel-comic/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-real-image-provider/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-story-planner-agent/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-lm-story-planner/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-single-panel-validation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-storyboard-agent/: brief_report.tex  brief_report.txt  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/comic_agent/: __init__.py
tests/integration/: test_mock_pipeline.py
tests/unit/: test_layout_composer.py  test_lm_story_planner.py  test_metadata_export.py  test_panel_validation.py  test_prompt_builder.py  test_provider_config.py  test_provider_selection.py  test_real_provider.py  test_reference_image_validation.py  test_story_planner.py
tmp/wanx-run/: metadata.json
(+30 files in other folders)
