[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "comic-agent"
version = "0.1.0"
description = "CLI MVP for four-panel comic generation"
requires-python = ">=3.11"
dependencies = ["Pillow>=10.0.0", "dashscope>=1.24.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
comic-agent = "comic_agent.cli.generate:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
